# fastrvm

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: fastrvm.md
src/cpp/: CMakeLists.txt  action_helpers.cpp  alignment_helpers.cpp  evaluate_helpers.cpp  laplace.cpp  laplace.hpp  logistic.hpp  sparse_bayes.cpp  sparse_bayes.hpp  update_helpers.cpp
src/python/fastrvm/: _rvc.py  _rvr.py  _sparsebayes_bindings.cpp  _sparsebayes_bindings.pyi
tests/: test_rvc.py  test_rvr.py
