[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "fastrvm"
version = "0.1.0"
description = "Fast Automatic Relevance Determination (ARD) regression and classification in Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [ { name = "brdav", email = "" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = ["machine learning", "bayesian learning", "automatic relevance determination", "relevance vector machine", "sparse learning", "regression", "classification", "python", "c++"]
dependencies = ["numpy>=1.22", "scikit-learn>=1.7.1"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "build",
  "wheel",
  "packaging",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/brdav/fastrvm"
Source = "https://github.com/brdav/fastrvm"

[tool.scikit-build]
cmake.version = ">3.18"
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/python/fastrvm"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-*"
test-command = "python -c \"import fastrvm; print('Test passed')\""
skip = "*musllinux*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
norecursedirs = [
  "extern",
  "build",
  "_skbuild",
]
