[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.13", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "fastrvm"
version = "0.1.3"
description = "Relevance Vector Machine in Python with a C++ Core"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [ { name = "brdav", email = "" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = [
  "relevance vector machine",
  "sparse bayesian learning",
  "sparse models",
  "kernel methods",
  "probabilistic machine learning",
  "sparse regression",
  "regression",
  "classification",
]
dependencies = [
  "numpy>=1.24.1; python_version < '3.13'",
  "numpy>=2.3.2; python_version >= '3.13'",
  "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build",
  "wheel",
  "packaging",
  "pre-commit",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/brdav/fastrvm"
Source = "https://github.com/brdav/fastrvm"

[tool.scikit-build]
cmake.version = ">3.18"
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/python/fastrvm"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
test-command = "python -c \"import fastrvm; print('Test passed')\""
skip = "*musllinux*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
norecursedirs = [
  "extern",
  "build",
  "_skbuild",
]
